--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "moduloA.js",
   "dependencies": {
     "axios": "^0.21.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "node-schedule": "1.3.0"
   },
   "devDependencies": {},
   "scripts": {
